Fix dark mode case study tiles

--- a/scss/_dark-mode.scss
+++ b/scss/_dark-mode.scss
@@ -56,6 +56,10 @@
   .case-study-tile {
     background-color: #232524;
     border-color: #232524;
+
+    p {
+      color: #fff;
+    }
   }
   
   .case-study--tag {
